--- a/core/template/dplan/jeelog.html
+++ b/core/template/dplan/jeelog.html
@@ -2,11 +2,11 @@
   <span class="statusCmd" style="position:absolute; left:5px; width:30px; z-index:1030;"></span>
   <i class='fa fa-refresh pull-right cursor refresh' style="margin-top:3px; margin-right:3px;"></i>
   <span class="cmd cmd-widget" data-cmd_id="#refresh_id#" style="display:none;"></span>
-  <center class="widget-name" style="background-color:#background-color#;color:#color#">
+  <center class="widget-name">
     <a href="#eqLink#" style="font-size:1.1em; #hideEqLogicName#">#name_display#<span style="font-size:0.75em; position:relative; top:-2px;">#object_name#</span></a>
   </center>
 
-  <p class="state" style="font-size:0.95em; line-height:0.92em; padding:0 0 0 5px; margin:0; background-color:#dplanBkg-color#; color:#dplan-color#">#jeelogData#</p>
+  <p class="state" style="font-size:0.95em; line-height:0.92em; padding:0 0 0 5px; margin:0;"">#jeelogData#</p>
 
   <script type="text/javascript">
     $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
