--- a/core/template/dashboard/jeelog.html
+++ b/core/template/dashboard/jeelog.html
@@ -1,7 +1,7 @@
 <div class="eqLogic eqLogic-widget allowResize" style="height:#height#; width:#width#; overflow:auto; text-align:left !important; border:#border#; border-radius:#border-radius#; background-color:#background-color#;color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
   <span class="statusCmd" style="position:absolute; left:5px; width:30px; z-index:1030;"></span>
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#" style="margin-top: 3px;margin-right: 3px;">
-		<i class="fa fa-refresh"></i>
+		<i class="fas fa-sync"></i>
   </span>
   <center class="widget-name">
     <a href="#eqLink#" style="font-size:1.1em; #hideEqLogicName#">#name_display#<span style="font-size:0.75em; position:relative; top:-2px;">#object_name#</span></a>
