--- a/core/template/dplan/jeelog.html
+++ b/core/template/dplan/jeelog.html
@@ -1,13 +1,13 @@
-<div class="eqLogic eqLogic-widget allowResize" style="height:#height#; width:#width#; overflow:auto; text-align:left !important; border:#border#; border-radius:#border-radius#; background-color:#dplanBkg-color#; color:#dplan-color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
+<div class="eqLogic eqLogic-widget allowResize" style="height:#height#; width:#width#; overflow:auto; text-align:left !important; border:#border#; border-radius:#border-radius#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
   <span class="statusCmd" style="position:absolute; left:5px; width:30px; z-index:1030;"></span>
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#" style="margin-top: 3px;margin-right: 3px;">
-		<i class="fa fa-refresh"></i>
+		<i class="fas fa-sync"></i>
   </span>
   <center class="widget-name">
     <a href="#eqLink#" style="font-size:1.1em; #hideEqLogicName#">#name_display#<span style="font-size:0.75em; position:relative; top:-2px;">#object_name#</span></a>
   </center>
 
-  <p class="state" style="font-size:0.95em; line-height:0.92em; padding:0 0 0 5px; margin:0;"">#jeelogData#</p>
+  <p class="state" style="background-color:#dplanBkg-color#; color:#dplan-color#; font-size:0.95em; line-height:0.92em; padding:0 0 0 5px; margin:0;"">#jeelogData#</p>
 
   <script type="text/javascript">
     $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
