--- a/core/template/dplan/jeelog.html
+++ b/core/template/dplan/jeelog.html
@@ -7,7 +7,7 @@
     <a href="#eqLink#" style="font-size:1.1em; #hideEqLogicName#">#name_display#<span style="font-size:0.75em; position:relative; top:-2px;">#object_name#</span></a>
   </center>
 
-  <p class="state" style="background-color:#dplanBkg-color#; color:#dplan-color#; font-size:0.95em; line-height:0.92em; padding:0 0 0 5px; margin:0;"">#jeelogData#</p>
+  <p class="state" style="background-color:#dplanBkg-color#; color:#dplan-color#; font-size:0.95em; line-height:1.1em; padding:3px 0 0 5px; margin:0;"">#jeelogData#</p>
 
   <script type="text/javascript">
     $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
