--- a/core/template/mobile/jeelog.html
+++ b/core/template/mobile/jeelog.html
@@ -1,13 +1,13 @@
-<div class="eqLogic eqLogic-widget" style="height:#height#; width:#width#; overflow:auto; text-align:left !important; border:#border#; border-radius:#border-radius#; background-color:#background-color#;color: #color#;#style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
-  <span class="statusCmd" style="position:absolute; left:5px; width:30px; z-index:1030;"></span>
-  <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#" style="margin-top: 3px;margin-right: 3px;">
+<div class="eqLogic eqLogic-widget" style="height:#height#; width:#width#; overflow:auto; text-align:left!important; background-color:#background-color#; color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
+  <span class="statusCmd"></span>
+  <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
 		<i class="fas fa-sync"></i>
   </span>
-  <center class="widget-name">
-    <a href="#eqLink#" style="font-size:1.1em; #hideEqLogicName#">#name_display#<span style="font-size:0.75em; position:relative; top:-2px;">#object_name#</span></a>
-  </center>
+  <center class="widget-name" style="#hideEqLogicName#">#name_display#</center>
 
-  <p class="state" style="font-size:0.95em; line-height:1.1em; padding:3px 0 0 5px; margin:0;">#jeelogData#</p>
+  <div style="padding:2px 0 0 3px; margin:0;">
+    <p class="state" style="font-size:12px!important; line-height:12px!important; ">#jeelogData#</p>
+  </div>
 
   <script type="text/javascript">
     $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
