--- a/core/template/dashboard/jeelog.html
+++ b/core/template/dashboard/jeelog.html
@@ -8,7 +8,7 @@
   </center>
 
   <div style="font-size:0.95em; line-height:1.1em; padding:3px 0 0 5px; margin:0;height:100%;position:relative">
-    <p class="state" style="height:calc(100% - 26px); overflow-y:scroll; margin-right:-22px">#jeelogData#</p>
+    <p class="state" style="height:calc(100% - 26px); overflow-y:scroll;">#jeelogData#</p>
   </div>
 
   <script type="text/javascript">
