--- a/core/template/mobile/jeelog.html
+++ b/core/template/mobile/jeelog.html
@@ -1,12 +1,12 @@
-<div class="eqLogic eqLogic-widget" style="height:#height#; width:#width#; overflow:auto; text-align:left!important; background-color:#background-color#; color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
+<div class="eqLogic eqLogic-widget" style="height:#height#; width:#width#; text-align:left!important; background-color:#background-color#; color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
   <span class="statusCmd"></span>
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
 		<i class="fas fa-sync"></i>
   </span>
   <center class="widget-name" style="#hideEqLogicName#">#name_display#</center>
 
-  <div style="padding:2px 0 0 3px; margin:0;">
-    <p class="state" style="font-size:12px!important; line-height:12px!important; ">#jeelogData#</p>
+  <div style="padding:2px 0 0 3px; margin:0;height: calc(100% - 24px);position:relative">
+    <p class="state" style="font-size:12px!important; line-height:12px!important; height: calc(100% - 24px); overflow-y:scroll; scrollbar-width:none;">#jeelogData#</p>
   </div>
 
   <script type="text/javascript">
