--- a/core/template/dashboard/jeelog.html
+++ b/core/template/dashboard/jeelog.html
@@ -4,7 +4,7 @@
 		<i class="fas fa-sync"></i>
   </span>
   <center class="widget-name">
-    <a href="#eqLink#" style="#hideEqLogicName#">#name_display#<span>#object_name#</span></a>
+    <a href="#eqLink#" style="#hideEqLogicName#">#name_display# <span class="object_name">#object_name#</span></a>
   </center>
 
   <div style="font-size:0.95em; line-height:1.1em; padding:3px 0 0 5px; margin:0;height:100%;position:relative">
