support eqlogics classes

--- a/core/template/dashboard/jeelog.html
+++ b/core/template/dashboard/jeelog.html
@@ -1,4 +1,4 @@
-<div class="eqLogic eqLogic-widget allowResize" style="height:#height#; width:#width#; text-align:left !important; background-color:#background-color#;color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
+<div class="eqLogic eqLogic-widget allowResize #eqLogic_class# #class#" style="height:#height#; width:#width#; text-align:left !important; background-color:#background-color#;color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
   <span class="statusCmd"></span>
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
 		<i class="fas fa-sync"></i>
