--- a/core/template/dashboard/jeelog.html
+++ b/core/template/dashboard/jeelog.html
@@ -1,10 +1,13 @@
 <div class="eqLogic eqLogic-widget allowResize #eqLogic_class# #class#" style="height:#height#; width:#width#; text-align:left !important; background-color:#background-color#;color:#color#; #style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-category="#category#">
-  <span class="statusCmd"></span>
-  <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
-		<i class="fas fa-sync"></i>
-  </span>
   <center class="widget-name">
-    <a href="#eqLink#" style="#hideEqLogicName#">#name_display# <span class="object_name">#object_name#</span></a>
+    <span class="warning" title="#alert_name#">
+      <i class='#alert_icon#'></i>
+    </span>
+    <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
+      <i class="fas fa-sync"></i>
+    </span>
+    <span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
+    <a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
   </center>
 
   <div style="font-size:0.95em; line-height:1.1em; padding:3px 0 0 5px; margin:0;height:100%;position:relative">
