--- a/core/template/mobile/jeelog.html
+++ b/core/template/mobile/jeelog.html
@@ -16,8 +16,8 @@
   </div>
 
   <script type="text/javascript">
-    $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
-      jeedom.cmd.execute({id: '#refresh_id#'});
-    });
+    document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh').addEventListener('click', function () {
+      jeedom.cmd.execute({id: '#refresh_id#'})
+    })
   </script>
 </div>
